# tinkerscope

./: .editorconfig  .gitignore  API_CONTRACT.md  BRANCHING_DESIGN.md  CLAUDE.md  HANDOFF_BRANCHING.md  HANDOFF_MULTIPANEL.md  IDEAS.md  LICENSE  README.md  TODO.md  hatch_build.py  pyproject.toml  run.sh
.githooks/: README.md  pre-commit
deprecated/: CLAUDE.md  HANDOFF.md  server.py
docs/: API_CONTRACT.md  BRANCHING_DESIGN.md  HANDOFF_BRANCHING.md  HANDOFF_MULTIPANEL.md  HANDOFF_SERVER_AUTHORITY.md  HANDOFF_WORKSPACE_RENAME.md  PACK.md  PROPOSAL_THREAD_SYSTEM_PROMPT.md  STORAGE_V2.md  TODO.md
scratch/: model_search_proposal.md  survey_configs.py
scripts/: dev-isolated.sh
src/tinkerscope/: __init__.py  cli.py  instances.py  pack.py  paths.py  serve.py
tests/: conftest.py  test_api.py  test_chat_params.py  test_chat_prefill.py  test_conversation_migration.py  test_conversations.py  test_discovery.py  test_pack.py  test_probe_frontmatter.py  test_thread_system.py  test_tinker_sampler.py  test_token_logprobs.py
tests/small-smokes/: _seed.py  _smoke_continue_inkling.py  _smoke_continue_inkling_live.py  _smoke_continue_reasoning.py  _smoke_models.py  branching_real_sample.py  browser_branch_from_root.py  browser_branching.py  browser_chart_firsttoken_ops.py  browser_chart_modal.py  browser_chart_rules.py  browser_cli_send.py  browser_continue_sample.py  browser_continue_scope.py  browser_conversation_url.py  browser_copy_buttons.py  browser_cross_panel_edit.py  browser_detached_nsamples.py  browser_detached_reload.py  browser_detached_scale.py  browser_edit_leak.py  browser_features.py  browser_fuzzy_search.py  browser_highlight_drag.py  browser_kbnav.py  browser_label_diff.py  browser_label_trunc.py  browser_legacy_echo_graft.py  browser_modals.py  browser_model_availability.py  browser_n_samples.py  browser_newconv_busy.py  browser_panel_add_modes.py  browser_panel_bubble_continues.py  browser_panel_drag.py  browser_panel_foreign_fold.py  browser_readme_shots.py  browser_row_toolbar.py  browser_save_lightening.py  browser_send_branch.py  (+30 more)
web/: package-lock.json  package.json  svelte.config.js  vite.config.ts
web/src/: app.css  app.html
(+92 files in other folders)
