[project]
name = "tinkerscope"
version = "0.1.0"
description = "Auto-discover Tinker training runs under a directory tree and chat with / sample from their checkpoints in the browser — driveable from the terminal."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sse-starlette>=2.1",
    "pydantic>=2",
    "python-dotenv>=1.0",
    "typer>=0.12",
    "httpx>=0.27",
    "httpx-sse>=0.4",
    "pyyaml>=6",
    # Remote sampling. tinker hosts the weights; this box is CPU-only and that
    # is fine. tinker-cookbook supplies the renderers (chat templates / stop
    # sequences / response parsing) and drags torch+transformers+datasets.
    # [inkling] pulls tml-renderers so Thinking Machines' Inkling resolves to its
    # real tml_v0 renderer (else it falls back to role_colon and crashes on any
    # multi-turn thread carrying reasoning); the extra also forces tinker>=0.23.
    "tinker>=0.23",
    "tinker-cookbook[inkling]",
    # OpenRouter compare backend.
    "openai>=1.40",
]

[project.scripts]
tinkerscope = "tinkerscope.serve:main"
tinkpg = "tinkerscope.cli:app"

[tool.uv.sources]
tinker-cookbook = { git = "https://github.com/thinking-machines-lab/tinker-cookbook.git" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tinkerscope"]
# web_dist/ is produced by the build hook (hatch_build.py) at wheel build time.
artifacts = ["src/tinkerscope/web_dist/**"]

[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build.py"

[tool.hatch.build.targets.sdist]
include = [
    "src/tinkerscope/**",
    "web/**",
    "hatch_build.py",
    "README.md",
]
exclude = [
    "web/node_modules/**",
    "web/dist/**",
    "web/.svelte-kit/**",
]

[dependency-groups]
dev = [
    "playwright>=1.60.0",
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-playwright>=0.8.0",
    "pytest-timeout>=2.3",
    "ruff>=0.8",
]

[tool.pytest.ini_options]
timeout = 180
asyncio_mode = "auto"
testpaths = ["tests"]
